--- a/index.html
+++ b/index.html
@@ -332,5 +332,5 @@
         padding: 0 5px;
     }
 </style>
-<img src=<img src="ruta/a/tu/imagen.jpg" alt="Descripción de la imagen"> alt="Descripción de la imagen">
+<img src=<img src="C:\Users\victo\Downloads\juguete-puzzle.jpg" alt="Descripción de la imagen"> alt="Descripción de la imagen">
 
