--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><strong>Evita Alimentos Peligrosos:</strong> Algunos alimentos humanos pueden ser tóxicos para los perros, como el chocolate, la uva y el ajo.</li>
                 <li><strong>Horario Regular:</strong> Alimenta a tu perro a las mismas horas todos los días para establecer una rutina.</li>
             </ul>
-            <img src="C:\Users\victo\Downloads\perro.jpg" alt="Alimentando a un perro" />
+            <img src="C:\Users\victo\dogcare.github.io\perro.jpg" alt="Alimentando a un perro" />
         </section>
         
         <section id="entrenamiento">
@@ -54,7 +54,7 @@
                 <li><strong>Dar la Pata:</strong> Un truco divertido que puedes enseñarle a tu perro para que te dé la pata. Tienes que seguir el mismo patron que cuando quieres que este sentado pero tocale la pata y luego cuando la levante acaricialo o recompensalo.</li>
                 <li><strong>Recoger Juguetes:</strong> Con paciencia, puedes enseñar a tu perro a recoger sus juguetes y guardarlos en una caja. Este es más complejo tienes que seguir un patron parecido a los primeros puedes tirarle juguetes y haz que te los devuelva y luego ya puedes hacer que los deje en una caja.</li>
             </ul>
-            <img src="C:\Users\victo\Downloads\perro_entrenando.jpg" alt="Entrenamiento de un perro" />
+            <img src="C:\Users\victo\dogcare.github.io\perro_entrenando.jpg" alt="Entrenamiento de un perro" />
         </section>
         
         <!-- Agregar más secciones aquí -->
@@ -68,22 +68,22 @@
             <h2>Juguetes Recomendados</h2>
             <p>Los juguetes son una parte esencial del bienestar y la felicidad de tu perro. Aquí tienes algunos juguetes recomendados para diferentes necesidades y estilos de juego:</p>
             <div class="toy">
-                <img src="C:\Users\victo\Downloads\juguete-cuerda.jpg" alt="Pelota para perros" />
+                <img src="C:\Users\victo\dogcare.github.io\juguete-cuerda.jpg" alt="Pelota para perros" />
                 <h3>Cuerda para Perros</h3>
                 <p>Ideal para juegos de buscar y atrapar. Ayuda a mantener a tu perro activo y en forma.</p>
             </div>
             <div class="toy">
-                <img src="C:\Users\victo\Downloads\juguete-masticar.jpg" alt="Juguete para masticar" />
+                <img src="C:\Users\victo\dogcare.github.io\juguete-masticar.jpg" alt="Juguete para masticar" />
                 <h3>Juguete para Masticar</h3>
                 <p>Perfecto para perros que aman masticar. Ayuda en la limpieza dental y satisface la necesidad natural de masticar.</p>
             </div>
             <div class="toy">
-                <img src="C:\Users\victo\Downloads\juguete-puzzle.jpg" alt="Juguete tipo rompecabezas" />
+                <img src="C:\Users\victo\dogcare.github.io\juguete-puzzle.jpg"="Juguete tipo rompecabezas" />
                 <h3>Juguete Tipo Rompecabezas</h3>
                 <p>Estimula la mente de tu perro y fomenta la resolución de problemas. Ideal para el entretenimiento mental.</p>
             </div>
             <div class="toy">
-                <img src="C:\Users\victo\Downloads\juguete-peluche.jpg" alt="Juguete de peluche" />
+                <img src="C:\Users\victo\dogcare.github.io\juguete-peluche.jpg" alt="Juguete de peluche" />
                 <h3>Juguete de Peluche</h3>
                 <p>Los juguetes de peluche son excelentes compañeros de abrazo y son ideales para juegos suaves y tiernos.</p>
             </div>
@@ -135,25 +135,25 @@
             <h1>Bienvenidos a la Tienda</h1>
             <div class="product-container">
                 <div class="product">
-                    <img src="C:\Users\victo\Downloads\juguete-masticar.jpg" alt="Juguete para masticar">
+                    <img src="C:\Users\victo\dogcare.github.io\juguete-masticar.jpg" alt="Juguete para masticar">
                     <h2>Juguete para masticar</h2>
                     <p>$20.00</p>
                     <button onclick="buyProduct('Juguete para masticar')">Comprar</button>
                 </div>
                 <div class="product">
-                    <img src="C:\Users\victo\Downloads\juguete-cuerda.jpg" alt="Cuerda para perro">
+                    <img src="C:\Users\victo\dogcare.github.io\juguete-cuerda.jpg" alt="Cuerda para perro">
                     <h2>Cuerda para perro</h2>
                     <p>$4.50</p>
                     <button onclick="buyProduct('Cuerda para perro')">Comprar</button>
                 </div>
                 <div class="product">
-                    <img src="C:\Users\victo\Downloads\juguete-puzzle.jpg" alt="Juguete puzzle">
+                    <img src="C:\Users\victo\dogcare.github.io\juguete-puzzle.jpg" alt="Juguete puzzle">
                     <h2>Puzzle</h2>
                     <p>$10.00</p>
                     <button onclick="buyProduct('Puzzle para perro')">Comprar</button>
                 </div>
                 <div class="product">
-                    <img src="C:\Users\victo\Downloads\juguete-peluche.jpg" alt="Peluche para perro">
+                    <img src="C:\Users\victo\dogcare.github.io\juguete-peluche.jpg" alt="Peluche para perro">
                     <h2>Peluche para perro</h2>
                     <p>$4.00</p>
                     <button onclick="buyProduct('Peluche para perro')">Comprar</button>
@@ -332,5 +332,5 @@
         padding: 0 5px;
     }
 </style>
-<img src=<img src="C:\Users\victo\Downloads\juguete-puzzle.jpg" alt="Descripción de la imagen"> alt="Descripción de la imagen">
+
 
