--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <p>Ideal para juegos de buscar y atrapar. Ayuda a mantener a tu perro activo y en forma.</p>
             </div>
             <div class="toy">
-                <img src="https://github.com/dogcareap/dogcare.github.io/blob/main/juguete-masticar.jpg?raw=true" alt="Juguete para masticar" />
+                <img src="https://github.com/dogcareap/dogcare.github.io/blob/main/juguete-masticar.jpg" alt="Juguete para masticar" />
                 <h3>Juguete para Masticar</h3>
                 <p>Perfecto para perros que aman masticar. Ayuda en la limpieza dental y satisface la necesidad natural de masticar.</p>
             </div>
