--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>Los juguetes de peluche son excelentes compañeros de abrazo y son ideales para juegos suaves y tiernos.</p>
             </div>
         </section>
-        <a href="mailto:mr.planck273@gmail.com?subject=Contacto desde la página web, puedes decirnos si quieres comprar algun juguete o alguna duda sobre como dominar al perro.">
+        <a href="mailto:doogcareap@gmail.com?subject=Contacto desde la página web, puedes decirnos si quieres comprar algun juguete o alguna duda sobre como dominar al perro.">
             <button>Enviar un correo a Mr. Planck</button>
           </a>
         </section>
@@ -163,7 +163,7 @@
             </div>
             <script>
                 function buyProduct(productName) {
-                    alert('Por favor, entre en Gmail y envíele un mensaje a mr.planck273@gmail.com y diga qué producto quiere: ' + productName);
+                    alert('Por favor, entre en Gmail y envíele un mensaje a doogcareap@gmail.com y diga qué producto quiere: ' + productName);
                 }
             </script>
         </body>
